--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     </head>
     <body>
         <h3>RUN BUDDY</h3>
-        What we do
-        🏃
+        What we do what you do your Trainers Reach Out
+
     </body>
 </html>
