html outline and gitignore

--- a/index.html
+++ b/index.html
@@ -5,8 +5,26 @@
         <title>Run Buddy</title>
     </head>
     <body>
-        <h3>RUN BUDDY</h3>
-        What we do what you do your Trainers Reach Out
+       <HEADER>
+           <H1>RUN BUDDY</H1>
+       </HEADER>
+       <section>
 
+       </section>
+       <section>
+           <h2>What we do</h2>
+       </section>
+       <section>
+           <H2>What you do</H2>
+       </section>
+       <section>
+           <h2>Meet the trainders</h2>
+       </section>
+       <section>
+           <h2>Reach Out</h2>
+       </section>
     </body>
+    <footer>
+        <h2>❤️ Made with love by Run Buddy.</h2>
+      </footer>
 </html>
