--- a/index.html
+++ b/index.html
@@ -6,7 +6,25 @@
     </head>
     <body>
        <HEADER>
-           <H1>RUN BUDDY</H1>
+           <H1>
+               <a href="/">RUN BUDDY</a>
+            </H1>
+            <nav>
+                <ul>
+                    <li>
+                        <a href="#What-we-do">What We Do</a>
+                    </li>
+                    <li>
+                        <a href="#What-you-do">What You Do</a>
+                    </li>
+                    <li>
+                        <a href="your-trainers">Your Trainers</a>
+                    </li>
+                    <li>
+                        <a href="reach-out">Reach Out</a>
+                    </li>
+                </ul>
+            </nav>
        </HEADER>
        <section>
 
