--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
     <head>
         <meta charset="UTF-8"/>
         <title>Run Buddy</title>
+        <link rel="stylesheet" href="./assets/css/style.css"/>
     </head>
     <body>
        <HEADER>
@@ -36,7 +37,7 @@
            <H2>What you do</H2>
        </section>
        <section>
-           <h2>Meet the trainders</h2>
+           <h2>Meet the trainers</h2>
        </section>
        <section>
            <h2>Reach Out</h2>
