--- a/index.html
+++ b/index.html
@@ -54,9 +54,28 @@
        </section>
        <section>
            <h2>What we do</h2>
+           <p>
+               butcher selfies chambray shabby chic gentrify readymade yr Echo Park XOX
+           </p>
        </section>
        <section>
            <H2>What you do</H2>
+           <div>
+               <h3>Step 1: Fill Out the Form Above.</h3>
+               <p>You're already here, so why not?</p>
+           </div>
+           <div>
+               <h3>Step 2: Consult with One of Our Trainers.</h3>
+               <p>Are you here to build muscle, lose weight, or just feel good?</p>
+           </div>
+           <div>
+               <h3>Step 3: Get Running.</h3>
+               <p>Hit the ground running (literally) once your trainer lays out your plan.</p>
+           </div>
+           <div>
+               <h3>Step 4: See Results</h3>
+               <p>Bi-weekly checkins with your trainer will keep you focused</p>
+           </div>
        </section>
        <section>
            <h2>Meet the trainers</h2>
