style what we do section

--- a/index.html
+++ b/index.html
@@ -52,13 +52,13 @@
             </form>
             </div>
        </section>
-       <section id="what-we-do">
+       <section id="what-we-do" class="intro">
            <h2>What we do</h2>
            <p>
-               butcher selfies chambray shabby chic gentrify readymade yr Echo Park XOX
+               butcher selfies chambray shabby chic gentrify readymade yr Echo Park XOX Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ab aspernatur, adipisci dolor cumque inventore quo architecto placeat facilis assumenda doloremque optio vel ducimus voluptas soluta illum eveniet, aut eum. Itaque.
            </p>
        </section>
-       <section id="what-you-do">
+       <section id="what-you-do" >
            <H2>What you do</H2>
            <div>
                <!-- insert this img element-->
