--- a/index.html
+++ b/index.html
@@ -53,17 +53,17 @@
             </div>
        </section>
        <section id="what-we-do" class="intro">
-           <h2>What we do</h2>
+           <h2 class="section-title primary-border">What we do</h2>
            <p>
                butcher selfies chambray shabby chic gentrify readymade yr Echo Park XOX Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ab aspernatur, adipisci dolor cumque inventore quo architecto placeat facilis assumenda doloremque optio vel ducimus voluptas soluta illum eveniet, aut eum. Itaque.
            </p>
        </section>
-       <section id="what-you-do" >
-           <H2>What you do</H2>
+       <section id="what-you-do" class="steps">
+           <H2 class="section-title secondary-border">What you do</H2>
            <div>
                <!-- insert this img element-->
                <img src="assets/Images/step-1.svg" alt="">
-               <h3>Step 1: Fill Out the Form Above.</h3>
+               <h3>Step 1: <span>Fill Out the Form Above.</span></h3>
                <p>You're already here, so why not?</p>
            </div>
            <div>
