--- a/index.html
+++ b/index.html
@@ -68,22 +68,53 @@
            </div>
            <div>
                <img src="assets/Images/step-2.svg" alt="">
-               <h3>Step 2: Consult with One of Our Trainers.</h3>
+               <h3>Step 2: <span>Consult with One of Our Trainers.</span></h3>
                <p>Are you here to build muscle, lose weight, or just feel good?</p>
            </div>
            <div>
                <img src="assets/Images/step-3.svg" alt="">
-               <h3>Step 3: Get Running.</h3>
+               <h3>Step 3: <span>Get Running.</span></h3>
                <p>Hit the ground running (literally) once your trainer lays out your plan.</p>
            </div>
            <div>
                <img src="assets/Images/step-4.svg" alt="">
-               <h3>Step 4: See Results</h3>
+               <h3>Step 4: <span>See Results</span></h3>
                <p>Bi-weekly checkins with your trainer will keep you focused</p>
            </div>
        </section>
-       <section>
-           <h2>Meet the trainers</h2>
+       <section id="your-trainers" class="trainers">
+           <h2 class="section-title primary-border">Meet the trainers</h2>
+           <artile class="Trainer text-left">
+                <img src="assets/Images/trainer-1.jpg" alt="Arron Stephens in his workout clothes, ready to pump iron" />
+                <div class="trainer-bio">
+                    <h3>Arron Stephens</h3>
+                    <h4>Speed / Strengh</h4>
+                    <p>
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Nesciunt, odit voluptates maxime autem hic libero repellat id sapiente dignissimos dolorum. Hic recusandae dicta tempora amet. Odit numquam iure iste architecto.
+                    </p>
+                </div>
+           </artile>
+           <article class="trainer">
+               <div class="trainer-bio text-right">
+                   <h3>Joanna Gill</h3>
+                   <h4>Endurance</h4>
+                   <p>
+                       Lorem ipsum dolor sit amet consectetur adipisicing elit. In soluta inventore repudiandae sequi aliquid explicabo, commodi atque, error totam dolore earum iste eum quae culpa quasi accusantium, reiciendis ad vero.
+                   </p>
+               </div>
+               <img src="./assets/Images/trainer-2.jpg">
+           </article class="trainer">
+                <img src="../run-buddy/assets/Images/trainer-3.jpg">
+                <div class="trainer-bio text-left">
+                    <h3>Harry :the Headband" Smith</h3>
+                    <h4>Strenght</h4>
+                    <p>
+                        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Pariatur aperiam quam corrupti architecto voluptatibus quas quasi reprehenderit? Consectetur esse recusandae commodi veniam placeat tempora fugit. Tempora nihil deleniti repellat ipsam.
+                    </p>
+                </div>
+           <article>
+
+           </article>
        </section>
        <section>
            <h2>Reach Out</h2>
