--- a/index.html
+++ b/index.html
@@ -157,6 +157,30 @@
   <!-- "reach out" section -->
   <section>
     <h2>Reach Out</h2>
+    <div class="contact-info">
+        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3465.9320041551046!2d-95.77247418458155!3d29.6927509820117!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8641204c9c92d30d%3A0x40bf3f586610023c!2s22802%20Spellbrook%20Bend%20Ln%2C%20Richmond%2C%20TX%2077407!5e0!3m2!1sen!2sus!4v1636782830179!5m2!1sen!2sus" 
+        width="600" 
+        height="450" 
+        style="border:0;" 
+        allowfullscreen="" 
+        loading="lazy">
+        </iframe>"
+    </div>
+    <div>
+        <h3>Run Buddy</h3>
+        <p>
+            Any questions or concerns before signing up?
+            <br />
+            Let us know and we'll be happy to talk to you!
+        </p>
+        <address>
+            55 Main Stree <br/>
+            some Town, CA <br/>
+            12345<br/>
+            P: 555.RUN.BUDZ (555.786.2839)<br/>
+            E. <a href="mailto:jorge.e.molina@hotmail.com">info@runbuddy.com</a>
+        </address>
+    </div>
   </section>
 
   <!-- footer -->
