add flexbox to the trainers

--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
   </section>
 
   <!-- "meet the trainers" section -->
-  <section id="your-trainers" class="trainers">
+  <section id="your-trainers" >
     <h2 class="section-title primary-border">Meet The Trainers</h2>
     <article class="trainer">
       <img src="./assets/images/trainer-1.jpg" alt="Arron Stephens in his workout clothes, ready to pump iron" />
@@ -140,11 +140,13 @@
           sed
           itaque velit maiores optio dolorem excepturi aperiam dolores, voluptatibus suscipit amet quis repellat!
         </p>
+        <article class="trainers">Trainer 1 Info</article>
       </div>
     </article>
 
     <!-- second trainer bio -->
-    <article class="trainer">
+    <article >
+      <img src="./assets/images/trainer-2.jpg" alt="Joanna Gill cooling off after a workout" />
       <div class="trainer-bio text-right">
         <h3>Joanna Gill</h3>
         <h4>Endurance</h4>
@@ -153,12 +155,13 @@
           sed
           itaque velit maiores optio dolorem excepturi aperiam dolores, voluptatibus suscipit amet quis repellat!
         </p>
+        <article class="trainers">Trainer 2 Info</article>
       </div>
-      <img src="./assets/images/trainer-2.jpg" alt="Joanna Gill cooling off after a workout" />
+      
     </article>
 
     <!-- third trainer bio -->
-    <article class="trainer">
+    <article >
       <img src="./assets/images/trainer-3.jpg"
         alt="Harry Smith wearing a headband and lifting comically small pink weights" />
       <div class="trainer-bio text-left">
@@ -169,6 +172,7 @@
           sed
           itaque velit maiores optio dolorem excepturi aperiam dolores, voluptatibus suscipit amet quis repellat!
         </p>
+        <article class="trainers">Trainer 3 Info</article>
       </div>
     </article>
   </section>
